# ansible

./: .gitignore  LICENSE  LICENSES  README.md  flake.nix  initial_install.sh  inventory.yaml  playbook_computer_setup.yaml  playbook_config.yaml  playbook_desktop_setup.yaml  playbook_homedir_setup.yaml  playbook_software_installation.yaml  pyproject.toml  wrapper.sh
docs/: nix.md
group_vars/: all.yaml  desktop.yaml  flatpaks.yaml  general.yaml  nas.yaml  workstation.yaml
molecule/full-monty/: converge.yml  molecule.yml  verify.yml
molecule/integration/: converge.yml  molecule.yml
playbooks/: config.yaml  essential_packages.yaml  fonts.yaml  homedir_setup.yaml  nas_client.yaml  nvidia.yaml  ollama.yaml  playbook_fonts.yaml  playbook_homedir_setup.yaml  playbook_nas_client.yaml  playbook_nvidia.yaml  playbook_repo_setup.yaml  repo_setup.yaml  script_installation.yaml  software_installation.yaml  storage.yaml
roles/cleanup/tasks/: main.yaml
roles/config/files/: 99_custom_desktop_shortcuts
roles/config/tasks/: custom_desktop_shortcut_override.yaml  disable_internal_speaker.yaml  main.yaml  networking.yaml  user.yaml  xfce4.yaml
roles/config/templates/: resolv.conf.j2
roles/desktop/: tasks.yaml
roles/desktop/tasks/: main.yaml
roles/essential_packages/defaults/: main.yaml
roles/essential_packages/tasks/: main.yaml
roles/fonts/tasks/: main.yaml
roles/homebrew/: README.md
roles/homebrew/defaults/: main.yml
roles/homebrew/handlers/: main.yml
roles/homebrew/tasks/: main.yaml  main.yml  user_setup.yaml
roles/homebrew/vars/: main.yml
(+148 files in other folders)
