[project]
authors = [{name = "Leon Welchert", email = "lichturm@posteo.de"}]
dependencies = ["molecule-plugins[podman]>=25.8.12,<26"]
name = "ansible"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
ansible = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
molecule = ">=26.4.0,<27"
ansible-core = ">=2.20.5,<3"
